--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="css-selector">
     <header>
       <div class="logo">
-        <img src="resources/images/Numeric Atelier Logo.png">
+        <img src="./Numeric Atelier Logo.png">
       </div>
       <div class="nav-div">
         <nav>
@@ -24,7 +24,7 @@
     </header>
     <main>
       <div class="intro-banner">
-        <img class="img-hover-zoom" src="resources/images/photo-1655635949348-953b0e3c140a-2.png"/>
+        <img class="img-hover-zoom" src="./photo-1655635949348-953b0e3c140a-2.png"/>
       </div>
       <br>
       <div class="about">
@@ -33,7 +33,7 @@
         <br>
         <br>
         <div>
-          <img class="about-img" src="resources/images/photo-1655635643568-f30d5abc618a.webp"/>
+          <img class="about-img" src="./photo-1655635643568-f30d5abc618a.webp"/>
           <div id="container">
             <p><span class="title-box">We're a company with a goal.</span></p>
             <p>We're trying to streamline the agreggation of data for web3 companies by offering pre-built packages that will order all your company APIs into one place.</p>
@@ -52,15 +52,15 @@
 
           <h2>Team</h2>
           <br>
-          <img class="team-banner" src="resources/images/photo-1664448010557-cd3c22c21335.png"/>
+          <img class="team-banner" src="./photo-1664448010557-cd3c22c21335.png"/>
           <div class="team">
             <div class="team-member">
-              <img src="resources/images/alexander-hipp-iEEBWgY_6lA-unsplash.png"/>
+              <img src="./alexander-hipp-iEEBWgY_6lA-unsplash.png"/>
               <h3>John Doe</h3>
               <p>CEO</p>
             </div>
             <div class="team-member">
-              <img src="resources/images/max-whitehead-IkjGJX81z_U-unsplash.png"/>
+              <img src="./max-whitehead-IkjGJX81z_U-unsplash.png"/>
               <h3>John Doe</h3>
               <p>CFO</p>
             </div>
